--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="https://b.zmtcdn.com/images/logo/zomato_logo_2017.png" />
-
+  <link rel="stylesheet" type="text/css" charset="UTF-8"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
   <link rel="stylesheet" href="./index.css" />
   <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   <title>Zomato Clone</title>
